# cryptography-template

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
execute/: Cargo.toml  README.md
execute/src/: main.rs
factory/: Cargo.toml
factory/src/: common.rs  lib.rs  secp.rs  tests.rs
src/: common.rs  main.rs  secp.rs  tests.rs
template/: Cargo.toml  README.md
template/src/: common.rs  lib.rs  secp.rs  tests.rs
