[package]
name = "cryptography-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.27.0", features = [ "global-context", "rand-std", "bitcoin-hashes-std"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.9"
hex = "0.4.3"
bincode = "1.3.3"
anyhow = "1.0.71"
log = "0.4.18"
dotenv = "0.15.0"
serde_json = "1"
sha3 = "0.10.8"
ethers = "2.0.8"
hex-literal = "0.4.1"
k256 = "0.13.1"
tokio = { version = "1.28.1", features = ["full"] }