[package]
name = "factory"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
secp256k1 = { workspace = true }
bincode = "1.3"
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true } 